# Citi-Bike-ETL-Workflow

./: README.md  main.tf  pyproject.toml  terraform.tfvars
.github/: debug.yml
.github/workflows/: CD.yml  CI.yml  CICD.yml  terraform.yml
composer/: variables.tf
dags/: datalake_dags.py
data/: populate_gold_station_utilization_weekly.sql
plugins/: citi_bike_scrapper.py  citi_bike_scrapper_bronze.py  data_transformation_silver.py  schema_validation_bronze.py  silver_transformation.py  validation_bronze.py
sql/: lake_gold.gold_station_utilization_weekly.sql  lake_silver._staging_master_bike_station_status.sql  lake_silver.master_bike_station_status.sql
storage/: main.tf  variables.tf
terraform/: backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/composer/: main.tf  variables.tf
terraform/storage/: main.tf  variables.tf
