[project]
name = "komalazram"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

[tool.poetry]
name = "komalazram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9"





[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

